--- a/index.html
+++ b/index.html
@@ -1,12 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
     <title>leader board</title>
 </head>
+
 <body>
-    
+    <!-- section start -->
+    <main>
+        <!-- top players and top blogs -->
+        <section class="container">
+            <div class="top-players">
+                <div class="top-text">
+                    <h3>Top Player</h3>
+                </div>
+                <div class="players">
+                    <div class="player">
+                        <img src="images/players/player-1.png" alt="">
+                        <h3>top player-1</h3>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-2.png" alt="">
+                        <h3>top player-2</h3>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-3.png" alt="">
+                        <h3>top player-3</h3>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-4.png" alt="">
+                        <h3>top player-4</h3>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-5.png" alt="">
+                        <h3>top player-5</h3>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-6.png" alt="">
+                        <h3>top player-6</h3>
+                    </div>
+                </div>
+                <hr>
+            </div>
+            <div class="top-blogs">
+                <div class="top-text">
+                    <h3>Top Blog</h3>
+                </div>
+                <div class="blogs">
+                    <div class="blog">
+                        <img src="images/blogs/blog-1.png" alt="">
+                        <div class="blog-info">
+                            <h4>13 of My Favorite
+                                UI/UX Goodies</h4>
+                            <small>By <span class="blog-author">Danny Sapio</span></small>
+                        </div>
+                    </div>
+                    <div class="blog">
+                        <img src="images/blogs/blog-2.png" alt="">
+                        <div class="blog-info">
+                            <h4>UI cheat sheet:
+                                list vs grids</h4>
+                            <small>By <span class="blog-author">Jeremiah Lam</span></small>
+                        </div>
+                    </div>
+                    <div class="blog">
+                        <img src="images/blogs/blog-3.png" alt="">
+                        <div class="blog-info">
+
+                            <h4>7 typography tips
+                                for interface design</h4>
+                            <small>By <span class="blog-author">Tess Gadd</span></small>
+                        </div>
+                    </div>
+                    <div class="blog">
+                        <img src="images/blogs/blog-4.png" alt="">
+                        <div class="blog-info">
+                            <h4>Your logo is
+                                copied</h4>
+                            <small>By <span class="blog-author">Ferdinand Vogler</span></small>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
+
 </html>
