--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
     <title>leader board</title>
+    <!-- font awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -81,6 +83,78 @@
                             <h4>Your logo is
                                 copied</h4>
                             <small>By <span class="blog-author">Ferdinand Vogler</span></small>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="container">
+            <div class="latest-courses">
+                <div class="top-text">
+                    <h3>Latest Courses</h3>
+                </div>
+                <div class="courses">
+                    <div class="course">
+                        <img src="images/courses/course-1.png" alt="">
+                        <div>
+                            <h3>React - The Complete Guide 2020</h3>
+                            <small>Reed Krakoff.</small>
+                        </div>
+                        <div class="course-info">
+                            <div class="course-icon">
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                            </div>
+                            <div class="course-rating">
+                                <small>4.5</small>
+                            </div>
+                            <div class="course-duration">
+                                <small>1:30hr</small>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="course">
+                        <img src="images/courses/course-2.png" alt="">
+                        <div>
+                            <h3>Powerpoint 2020 Master Powerpoint Cour</h3>
+                            <small>Reed Krakoff.</small>
+                        </div>
+                        <div class="course-info">
+                            <div class="course-icon">
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                            </div>
+                            <div class="course-rating">
+                                <small>4.5</small>
+                            </div>
+                            <div class="course-duration">
+                                <small>1:30hr</small>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="course">
+                        <img src="images/courses/course-3.png" alt="">
+                        <div>
+                            <h3>The Complete JavaScript Course 2020</h3>
+                            <small>Reed Krakoff.</small>
+                        </div>
+                        <div class="course-info">
+                            <div class="course-icon">
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                            </div>
+                            <div class="course-rating">
+                                <small>4.5</small>
+                            </div>
+                            <div class="course-duration">
+                                <small>1:30hr</small>
+                            </div>
                         </div>
                     </div>
                 </div>
